--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -14,17 +14,18 @@
         <form class="login-form" action="/login" method="POST">
             <div class="form-control">
                 <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email" value="<%= oldInput.email %>">
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password">
+                <input type="password" name="password" id="password" value="<%= oldInput.password %>"> 
             </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit">Login</button>
+            
+            <button class="btn btn-reset"><a href="/reset">Reset Password</a></button>
+            
         </form>
-        <div class="centered">
-            <a href="/reset">Reset Password</a>
-        </div>
+       
     </main>
 <%- include('../includes/end.ejs') %>
