--- a/public/css/main.css
+++ b/public/css/main.css
@@ -191,6 +191,7 @@ form {
 
 .card__image img {
   width: 100%;
+  height: 15rem;
 }
 
 .card__actions {
@@ -264,5 +265,36 @@ form {
     width: 30rem;
 
   }
+
+.pagination {
+
+  margin-top: 2rem;
+  text-align: center;
+
+}
+
+.pagination a {
+  text-decoration: none;
+  color: green;
+  padding: 0.5rem;
+  border: 1px solid #00695c;
+  margin: 0 1rem;
+
+}
+
+.pagination a.active {
+  background: #00695c;
+  color: white;
+}
+
+.pagination a:hover,
+.pagination a :active
+ {
+
+  background: #00695c;
+  color: white;
+}
+
+
 
 }
